[workspace]
members = [
    "token-module/programs/token-module",
    "multisig-module/programs/multisig-module",
    "common-utils/programs/common-utils",
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1



# [workspace]
# members = [
#     "programs/multisig-module",
# ]

# # [features]
# # idl-build = ["multisig-module/idl-build"]

# # [dependencies]
# # token_module = { path = "./programs/multisig-module", features = ["no-entrypoint"] }

# [profile.release]
# overflow-checks = true
# lto = "fat"
# codegen-units = 1
# [profile.release.build-override]
# opt-level = 3
# incremental = false
# codegen-units = 1